# TryingOutSDL

./: TryingOutSDL.sln
TryingOutSDL/: CMakeLists.txt  CharacterTable.h  GUI.h  SDLHandler.cpp  SDLHandler.h  SDLHandling.cpp  SDLHandling.h  TryingOutSDL.vcxproj  TryingOutSDL.vcxproj.filters  Window.cpp  Window.h  main.cpp
